<resources>
    <string name="googleAdsId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Medinfi</string>
    <string name="dr">Dr</string>
    <string name="poor">POOR</string>
    <string name="beta">BETA VERSION</string>
    <string name="great">GREAT</string>
    <string name="hello_world">App</string>
    <string name="location">YOUR LOCATION IS</string>
    <string name="use_this_location">USE THIS LOCATION</string>
    <string name="or">OR</string>
    <string name="specify_your_location">TELL US YOUR LOCATION</string>
    <string name="select_city">SELECT CITY</string>
    <string name="specialists">SPECIALISTS</string>
    <string name="specialist_doctors">SPECIALIZATIONS</string>
    <string name="medicine_delivery">MEDICINE DELIVERY</string>
    <string name="easy_steps">  -  in 3 easy steps</string>
    <string name="click_pic">Click a photo of your prescription</string>
    <string name="submit_request">SUBMIT REQUEST</string>
    <string name="submit">SUBMIT</string>
    <string name="near_me">NEAR ME</string>
    <string name="top_rated">TOP RATED</string>
    <string name="upload_pres_payment">Upload Prescription / Payment Receipt Image</string>
    <string name="loc_message">"Currently available in few localities in Delhi, Bangalore and Mumbai."</string>
    <string name="pharma">Our pharmacy partner will call you on this number</string>
    <string name="chemist">Chemists can not sell prescription drugs without doctor\'s name and the date of prescription</string>
    <string name="partner">Your details will be shared with our pharmacy partner.</string>
    <string name="calls">Expect a call from them in 3 hours</string>
    <string name="agree">I agree to the </string>
    <string name="agreeterms">terms &amp; conditions</string>
    <string name="available_at">Available at</string>
    <string name="rate_review">RATE &amp; REVIEW</string>
    <string name="rate_the_doctor_tv">RATE &amp; REVIEW </string>
    <string name="rate_the_hospital_tv">RATE AND \nREVIEW </string>
    <string name="rate_the_hospital">RATE THE HOSPITAL</string>
    <string name="rate_the_doctor">RATE THE DOCTOR</string>
    <string name="awards_and_recognisation">AWARDS AND RECOGNITIONS</string>
    <string name="membership">MEMBERSHIP</string>
    <string name="other_details">MORE INFO</string>
    <string name="gp">GENERAL PHYSICIANS</string>
    <string name="hospitals">HOSPITALS</string>
    <string name="select_location">SELECT LOCATION</string>
    <string name="why_should_you_upload">Why should you upload it ?</string>
    <string name="search_hint_gp">SEARCH BY NAME IN GENERAL PHYSICIAN</string>
    <string name="check_doctors">CHECK OUT DOCTORS NEAR YOU</string>
    <string name="no_location">WE COULD NOT DETECT YOUR LOCATION</string>
    <string name="specify_location">SPECIFY YOUR LOCATION TO PROCEED</string>
    <string name="rated">RATED</string>
    <string name="km">km</string>
    <string name="fees">Fees</string>
    <string name="wait_time">Wait Time</string>
    <string name="feesCaps">FEES</string>
    <string name="wait_timeCaps">WAIT TIME</string>
    <string name="attitude">Attitude</string>
    <string name="high">HIGH</string>
    <string name="low">LOW</string>
    <string name="share">SHARE</string>
    <string name="associated_doctors">DOCTORS</string>
    <string name="associated_hospitals">PRACTICES IN</string>
    <string name="review">REVIEWS</string>
    <string name="viewall">VIEW ALL</string>
    <string name="readall">READ ALL</string>
    <string name="step_1">STEP - 1</string>
    <string name="step_2">STEP - 2</string>
    <string name="step_3">STEP - 3</string>
    <string name="attitude_towards_patients">Attitude Towards Patients</string>
    <string name="overall_satisfaction">Overall Satisfaction</string>
    <string name="i_recommend">I Recommend this doctor to Friends or Family ?</string>
    <string name="enter_number">Mobile Number</string>
    <string name="no">NO</string>
    <string name="next">NEXT</string>
    <string name="yes">YES</string>
    <string name="may_be">MAY-BE</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="enter_city">Select City</string>
    <string name="have_more_to_share">Have more details to share?</string>
    <string name="enter_address">Delivery Address</string>
    <string name="share_your_prescription">Share Your Prescription</string>
    <string name="contact_delivery_details">Contact &amp; delivery details</string>
    <string name="share_your_doctors_prescription">Doctor &amp; prescription detail</string>
    <string name="date_of_prescription">Date of Prescription</string>
    <string name="upload_pres">UPLOAD PRESCRIPTION IMAGE</string>
    <string name="upload_help_text">This helps us prevent fake reviews. Your prescription will not be shared</string>
    <string name="thanks_message">THANKS FOR RATING A DOCTOR</string>
    <string name="thanks_message_hospital">THANKS FOR RATING A HOSPITAL</string>
    <string name="your_message">Your contributions help others \n make life-saving decision</string>
    <string name="terms_of_use">TERMS OF USE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="feedback">FEEDBACK</string>
    <string name="terms_of_use_home">Terms of Use</string>
    <string name="privacy_policy_home">Privacy Policy</string>
    <string name="feedback_home">Feedback</string>
    <string name="doctor_name_hint">Doctor\'s Name</string>
    <string name="create_account">SIGN UP</string>
    <string name="create_account_text">This helps us retrieve your content \n across different devices</string>
    <string name="whatsapp_message">Hi. It would be great if you can share your opinion on Fortis Hospital, Bangalore \n\n
https://play.google.com/store/apps/details?id=com.appsonclick.mediinfi</string>
    <string name="register">REGISTER</string>
    <string name="plus">+91 - </string>
    <string name="remember">Remember Me</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="email">Email ID</string>
    <string name="conform_password">Confirm Password</string>
    <string name="experience">EXPERIENCE</string>
    <string name="qualification">QUALIFICATION</string>
    <string name="upload_pres_image">Please Upload Prescription Image</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="hospital_description">HOSPITAL DESCRIPTION</string>
    <string name="hospital_speciality">HOSPITAL SPECIALITY</string>
    <string name="hospital_website">HOSPITAL WEBSITE</string>
    <string name="agree_message">Please agree to the Terms of Use</string>
    <string name="gp_hint_search">Enter text (min 3 char) e.g. abc</string>
    <string name="member_hospital">Hospital</string>
    <string name="member_fees">Fees</string>
    <string name="member_type">Type</string>
    <string name="member_year">Year</string>
    <string name="Reg_Category">Registration</string>
    <string name="Reg_Action">User Registration</string>
    <string name="hint_GeneralPhysician">doctor or specialization</string>
    <string name="hint_Specialization">specialization or area of expertise</string>
    <string name="hint_Hospital">hospital name</string>
    <string name="No_Network">You are offline</string>
    <string name="No_NetworkDesc">Your device is currently not connected to the internet, please try again.</string>
    <string name="ok_msg">Ok</string>
    <string name="cannot_get_address">Unable to detect your location.</string>
    <string name="title_SplashScreen">finding doctors &amp; hospitals near you...</string>
    <string name="Title_gprs">Turn on Location Services to Allow Medinfi to determine your location</string>
    <string name="Msg_gprs">Nearest doctors and hospitals will be shown based on your location.</string>
    <string name="Msg_gprs_settings">Ok</string>
    <string name="Msg_gprs_manual">Cancel</string>
    <string name="Msg_Location">CURRENT LOCATION</string>
    <string name="Msg_Location_Availability">Currently available only in</string>
    <string name="Msg_Location_Available_City">Bengaluru, Mumbai, Navi Mumbai, New Delhi, Noida, Ghaziabad &amp; Gurgaon</string>
    <string name="hint_choose_city">Choose City</string>
    <string name="hint_choose_locality">Choose Locality</string>
    <string name="btn_Upload">UPDATE</string>
    <string name="label_city">SELECT CITY</string>
    <string name="label_lacolity">SELECT LOCALITY</string>
    <string name="label_auto_detected">AUTO-DETECT LOCATION</string>
    <string name="msg_noComission">Medinfi does not endorse any doctors or hospitals.</string>
    <string name="errorMesg_PrecriptionFormat">Please upload a valid image.</string>
    <string name="errorMesg_CityCancel">Could not retrieve information.</string>
    <string name="errorMesg_CityCancelPlease">Please try again.</string>
    <string name="msgExistUser">Existing User ?</string>
    <string name="msgSignIn">Sign In</string>
    <string name="msgForgotPassWord">Forgot ? </string>
    <string name="msgSignInCap">SIGN IN</string>
    <string name="msgNewUser">New User ? </string>
    <string name="msgNewUserSignIn">Sign Up </string>
    <string name="msgRegDesc">We are committed to protecting your privacy and personal information. By proceeding, you agree to our Privacy Policy and Terms of Use</string>
    <string name="msgReg_EmailAlreadyReg">Email already registered.</string>
    <string name="msgReg_Either_Mail_Pwd">The email or password you entered is incorrect.</string>
    <string name="msgReg_Failed">Registration failed.</string>
    <string name="msgReg_ResetPwd">Reset your password</string>
    <string name="msgReg_ResetPwdDecs">An email has been sent to</string>
    <string name="msgReg_ResetPwdDecs1">Click on the link to reset your password.</string>
    <string name="msgReg_NoRecordFound">id is not registered.</string>
    <string name="msgRateFeeBlanck">Fees Rating is blank!!!</string>
    <string name="msgRateWaitTimeBlanck">Wait Time Rating is blank!!!</string>
    <string name="msgRateAttitudeBlanck">Attitude towards Patients Rating is blank!!!</string>
    <string name="msgRateOverallBlanck">Overall Satisfaction Rating is blank!!!</string>
    <string name="msgRateRecommendBlanck">Recommend Rating is blank!!!</string>
    <string name="msgRegMailIDBlanck">Please enter valid email id</string>
    <string name="msgRegPassBlanck">password</string>
    <string name="msgRegPassFullBlanck">Please enter password</string>
    <string name="msgRegConfPassBlanck">confirm password</string>
    <string name="msgRegConfPassFullBlanck">Please enter confirm password</string>
    <string name="msgRegPassMismatchBlanck">Password mismatch.Please try again</string>
    <string name="msgRegCreatingUser">Creating User...</string>
    <string name="msgRegSignInUser">Sign In...</string>
    <string name="msgResetingUser">Resetting the password...</string>
    <string name="msgTitlRegInvalidPwd">Invalid password</string>
    <string name="syncWithPhone">Sync with your phone book</string>
    <string name="syncWithPhoneFound">We found the following doctors and hospitals from your phonebook, already present in our records.</string>
    <string name="syncSaveAll">Save All</string>
    <string name="No_ResultFound">No Results Found.</string>
    <string name="uploadPrTakePhoto">Take Photo</string>
    <string name="uploadPrGallery">Choose from Gallery</string>
    <string name="uploadPrCancel">Cancel</string>
</resources>