<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:orientation="vertical" >

        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/loc_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/location"
            android:textColor="@android:color/black" />

        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/location"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_use_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/city_selector"
            android:text="@string/use_this_location"
            android:textColor="@color/text_color_selector"
            android:textSize="12sp" />
        
         <TextView
             android:visibility="gone"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_location_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loc_message"
            android:textColor="@android:color/black"
            />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_layout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@drawable/line_one" >

        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/or_color"
            android:id="@+id/ortext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:orientation="vertical" >

        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tell_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/specify_your_location"
            android:textColor="@android:color/black" />

        <Button
            android:textColor="@color/text_color_selector"
            android:id="@+id/btn_select_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
              android:background="@drawable/city_selector"
            android:text="@string/select_city"
             />
    </LinearLayout>

</RelativeLayout>