<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/rectangle"
        android:orientation="vertical"
        android:padding="2dip" >

        <TextView
            android:id="@+id/textDialog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:gravity="start"
            android:text="@string/Title_gprs"
            android:textColor="@color/black"
            android:textSize="18sp" />
        
         <TextView
            android:id="@+id/textDialogMsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="7dip"
            android:gravity="start"
            android:text="@string/Msg_gprs"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="20dip"
            android:background="@color/black"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dip"
            android:weightSum="2" >

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:textSize="14sp"
                 android:background="@color/white"
                android:text="@string/Msg_gprs_settings"
                android:textColor="@color/pink_color" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/line_two"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:textSize="14sp"
                android:background="@color/white"
                android:text="@string/Msg_gprs_manual"
                android:textColor="@color/pink_color" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>