<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/takePhotoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dip"
        android:layout_marginTop="12dip" >

        <com.medinfi.utils.TextViewRobotoRegular
            android:id="@+id/textTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/uploadPrTakePhoto"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#D3D3D3" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/galleryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dip"
        android:layout_marginTop="12dip" >

        <com.medinfi.utils.TextViewRobotoRegular
            android:id="@+id/textGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/uploadPrGallery"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#D3D3D3" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dip"
        android:layout_marginTop="12dip" >

        <com.medinfi.utils.TextViewRobotoRegular
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/uploadPrCancel"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>